--- a/Geek.ProjectCore.Db/Geek.ProjectCore.Db.csproj
+++ b/Geek.ProjectCore.Db/Geek.ProjectCore.Db.csproj
@@ -4,4 +4,16 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FreeSql" Version="1.8.1" />
+    <PackageReference Include="FreeSql.Provider.MySql" Version="1.8.1" />
+    <PackageReference Include="FreeSql.Repository" Version="1.8.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.7" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.7" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Geek.ProjectCore.Common\Geek.ProjectCore.Common.csproj" />
+  </ItemGroup>
+
 </Project>
