--- a/Geek.ProjectCore.Repository/Geek.Project.Repository.csproj
+++ b/Geek.ProjectCore.Repository/Geek.Project.Repository.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>..\Geek.Project.Api\Geek.Project.Repository.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\Geek.Project.Domain\Geek.Project.Domain.csproj" />
   </ItemGroup>
